@@ -119,6 +119,8 @@ version ? (????-??-??):
   - customergroups: extended group name to 255 chars [ceho]
   - lms-traffic: disable 'autocommit' for postgresql [ceho]
   - clicking on mac icon changes mac format [chilan]
+  - daemon/payments: better to not depend on localtime() singularity [chilan]
+  - daemon/payments: fixed assignment numberplan support [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
